<resources>
    <string name="app_name">ChenZhongMing</string>
    <string name="Coffer_Introduction"> "        "香醇美味的咖啡让人向往，你可能不知道，
        喝咖啡是一门艺术，什么样的咖啡怎样饮用都是有讲究的，下面就教你几种类型咖啡
        的饮用小常识，让你品味最高级美味的咖啡，由外行人变内行人。并且还会告诉你不同种类咖啡的配料及组成，
    让你可以在家里自己尝试如何做一杯美味的咖啡。</string>
    <string name="Espress">♨意式特浓♨</string>
    <string name="Americano">♨美式咖啡♨</string>
    <string name="Macchiato">♨玛琪雅朵♨</string>
    <string name="Cappuccino">♨卡布奇诺♨</string>
    <string name="Mocha">♨摩卡♨</string>

    <string name="espress_introduction">"        "Espresso是一个意大利单词，指的是一种用咖啡机在
        短时间内急速萃取的浓烈咖啡，几乎称得上是所有花式咖啡的基础，也是全世界咖啡馆的必备。
        Espresso很小杯，通常只有30毫升左右，味道很苦，表面浮着一层厚厚的油脂，会与一杯清水同上，
        可以选择加糖。在咖啡馆中点Espresso的客人，要么是真正的咖啡爱好者，想品尝到咖啡最本真的滋味;
        要么纯粹是因为困极了急需提神。想在咖啡馆闲适地打发一下午的人，就不太适合点这个哟。
        有些咖啡馆的Esprssso可以选择“Single单份”或者“Double双份”，双份可不是两杯的意思，
        而是指用双倍的咖啡粉萃取，会更苦。</string>

    <string name="americano_introduction">"        "很多咖啡馆的“当日咖啡”其实就是美式咖啡，
        这通常也是咖啡馆菜单上最便宜的一种。美式咖啡说白了，就是小半杯Esprssso兑上大半杯白开水，
        也有咖啡馆会使用滴滤式咖啡壶冲泡。美式咖啡味道淡、颜色浅，微酸微苦，通常咖啡馆会提供牛奶和砂糖。
        如果服务生给的是奶精，不妨要求换成鲜牛奶。</string>

    <string name="macchiato_introduction">"        "Macchiato又被很多咖啡馆翻译为“玛朵奇”，
        简单说就是往一杯Espresso里舀入几勺奶泡。咖啡味道依旧浓烈，还能享受到细腻绵密的奶泡。
        我们经常会听到“焦糖玛奇朵”，据说这是星巴克的独创，其做法是在牛奶中加入香草糖浆，
        与Espresso咖啡混合，再于奶泡上覆盖一层焦糖，口味层次很丰富。</string>

    <string name="cappuccino_introduction">"        "曾几何时，萧亚轩一首《Cappuccino》红遍大江南北，
        歌词中“爱情像Cappuccino，浓浓的眷恋泡沫”这一句，让大家都知道了这种咖啡的特点——泡沫多。
        卡布奇诺和拿铁咖啡的成分一样，都是Espresso+牛奶+奶泡，不同之处仅在于卡布奇诺奶泡比牛奶多，
        拿铁则是牛奶比奶泡多。同等价位的卡布奇诺，通常比拿铁要小杯，但咖啡味更浓郁。
        绵密的奶泡和苦咖啡的碰撞，也得到大量顾客，尤其是女生的喜爱。</string>

    <string name="mocha_introduction">"        "摩卡的配方成分就相对比较复杂了，在Espresso
        和牛奶的基础上，还有巧克力酱，顶端不是奶泡，而是打发的鲜奶油，还往往会挤上巧克力酱，
        或者撒上可可粉、肉桂粉，别有一番风味。由于“内容丰富”，通常售价较高，也比较大杯。
        巧克力和奶油都有甜味，因此摩卡咖啡是苦甜结合的典范。</string>

    <string name="make_espress">1份浓缩咖啡</string>
    <string name="make_americano">1份浓缩咖啡"\n"2份水</string>
    <string name="make_macchiato">1份浓缩咖啡"\n"0.5份奶泡</string>
    <string name="make_cappuccino">1份浓缩咖啡"\n"0.5份热牛奶"\n"1.5份奶泡</string>
    <string name="make_mocha">1份浓缩咖啡"\n"1份热牛奶"\n"0.5份巧克力酱"\n"0.5份鲜奶油</string>
</resources>
